# lingmoui-addons

./: .kde-ci.yml  CMakeLists.txt  KFLingmoUIAddonsConfig.cmake.in  Mainpage.dox  PKGBUILD  README.md  metainfo.yaml
.reuse/: dep5
autotests/: BaseAlbumMaximizeComponentTestCase.qml  CMakeLists.txt  qmltests.cpp  tst_album_qmllistmodel.qml  tst_album_qmlqobjectmodel.qml  tst_avatar.qml  tst_sounds.qml
examples/FormCardTutorial/: main.cpp
examples/FormCardTutorial/contents/ui/: JsonAboutPage.qml  MyAboutPage.qml  SettingsPage.qml  main.qml
examples/TableViewTutorial/: main.cpp
examples/TableViewTutorial/contents/ui/: ListTableViewPage.qml  TableViewPage.qml  main.qml
po/ar/: lingmoui-addons6.po
po/ast/: lingmoui-addons6.po
po/az/: lingmoui-addons6.po
po/bg/: lingmoui-addons6.po
po/ca/: lingmoui-addons6.po
po/ca@valencia/: lingmoui-addons6.po
po/cs/: lingmoui-addons6.po
po/de/: lingmoui-addons6.po
po/el/: lingmoui-addons6.po
po/en_GB/: lingmoui-addons6.po
po/eo/: lingmoui-addons6.po
po/es/: lingmoui-addons6.po
po/eu/: lingmoui-addons6.po
po/fi/: lingmoui-addons6.po
po/fr/: lingmoui-addons6.po
po/gl/: lingmoui-addons6.po
po/he/: lingmoui-addons6.po
po/hi/: lingmoui-addons6.po
po/hu/: lingmoui-addons6.po
po/ia/: lingmoui-addons6.po
po/is/: lingmoui-addons6.po
po/it/: lingmoui-addons6.po
po/ja/: lingmoui-addons6.po
po/ka/: lingmoui-addons6.po
po/ko/: lingmoui-addons6.po
po/lt/: lingmoui-addons6.po
po/lv/: lingmoui-addons6.po
po/nl/: lingmoui-addons6.po
po/nn/: lingmoui-addons6.po
po/pl/: lingmoui-addons6.po
po/pt/: lingmoui-addons6.po
po/pt_BR/: lingmoui-addons6.po
po/ro/: lingmoui-addons6.po
po/ru/: lingmoui-addons6.po
po/sk/: lingmoui-addons6.po
po/sl/: lingmoui-addons6.po
po/sv/: lingmoui-addons6.po
po/ta/: lingmoui-addons6.po
po/tr/: lingmoui-addons6.po
po/uk/: lingmoui-addons6.po
po/zh_CN/: lingmoui-addons6.po
po/zh_TW/: lingmoui-addons6.po
src/: Messages.sh
src/components/: AbstractMaximizeComponent.qml  AlbumMaximizeComponent.qml  Avatar.qml  AvatarButton.qml  Banner.qml  BottomDrawer.qml  CMakeLists.txt  DialogRoundedBackground.qml  DoubleFloatingButton.qml  DownloadAction.qml  FloatingButton.qml  FloatingToolBar.qml  ImageMaximizeDelegate.qml  MessageDialog.qml  SearchPopupField.qml  SegmentedButton.qml  VideoMaximizeDelegate.qml
src/dateandtime/: CMakeLists.txt  DatePopup.qml  TimePicker.qml  TimePopup.qml
src/dateandtime/android/: AndroidManifest.xml  CMakeLists.txt  KF6LingmoUIDateAndTime-android-dependencies.xml
src/dateandtime/android/org/kde/lingmouiaddons/dateandtime/: DatePicker.java  TimePicker.java
src/dateandtime/lib/: androidintegration.cpp  androidintegration.h  plugin.cpp
src/dateandtime/private/: ClockElement.qml  DatePathView.qml  DatePicker.qml  DatePickerDelegate.qml  Hand.qml
src/delegates/: CMakeLists.txt  DefaultContentItem.qml  IndicatorItemDelegate.qml  RoundedItemDelegate.qml  RoundedTreeDelegate.qml  SubtitleContentItem.qml  plugin.cpp
src/formcard/: AboutKDE.qml  AboutPage.qml  AbstractFormDelegate.qml  CMakeLists.txt  FormArrow.qml  FormButtonDelegate.qml  FormCard.qml  FormCardDialog.qml  FormCardPage.qml  FormCheckDelegate.qml  FormColorDelegate.qml  FormComboBoxDelegate.qml  FormDateTimeDelegate.qml  FormDelegateBackground.qml  FormDelegateSeparator.qml  FormGridContainer.qml  FormHeader.qml  FormPasswordFieldDelegate.qml  FormRadioDelegate.qml  FormSectionText.qml  FormSpinBoxDelegate.qml  FormSwitchDelegate.qml  FormTextAreaDelegate.qml  FormTextDelegate.qml  FormTextFieldDelegate.qml
src/formcard/android/: FormColorDelegate.qml
src/formcard/lib/: formcardplugin.cpp
src/formcard/private/: SpinButton.qml
src/settings/: CMakeLists.txt  CategorizedSettings.qml  ConfigurationModule.qml  ConfigurationView.qml  SettingAction.qml  SpellcheckingConfigurationModule.qml  plugin.cpp
src/settings/private/: CMakeLists.txt  ConfigMobilePage.qml  ConfigWindow.qml  SonnetConfigPage.qml
src/sounds/: CMakeLists.txt  SoundsPicker.qml
src/sounds/lib/: soundspickermodel.cpp
src/statefulapplication/: CMakeLists.txt  StatefulWindow.qml  abstractlingmouiapplication.cpp  abstractlingmouiapplication.h  lingmouiactioncollection.cpp  lingmouiactioncollection.h  shortcutsmodel.cpp  shortcutsmodel_p.h
src/statefulapplication/labs/: CMakeLists.txt  NativeMenuItem.qml
src/statefulapplication/private/: CMakeLists.txt  KQuickCommandBarPage.qml  KeySequenceItem.qml  ShortcutsEditor.qml  defaultapplication.cpp  defaultapplication.h  kwindowstatesaverquick.h
src/tableview/: CMakeLists.txt  tableviewplugin.cpp
src/tableview/private/: AbstractHeaderComponent.qml  AbstractTable.qml  HeaderDelegate.qml  ListCellDelegate.qml  ListRowDelegate.qml  TableCellDelegate.qml
src/tableview/qml/: KTableView.qml  ListTableView.qml
src/treeview/: CMakeLists.txt  treeviewplugin.cpp
src/treeview/qml/: TreeViewDecoration.qml
templates/: CMakeLists.txt
templates/lingmouiaddons6/: .flatpak-manifest.json  CMakeLists.txt  lingmoui.kdevtemplate  org.kde.%{APPNAMELC}.metainfo.xml
templates/lingmouiaddons6/src/: %{APPNAMELC}application.cpp  %{APPNAMELC}application.h  CMakeLists.txt  main.cpp
tests/: Avatars.qml  DelegateApp.qml  FloatingButtons.qml  FormTestApp.qml  SettingsApp.qml  TestSettingPage.qml  TestTextFieldDelegate.qml  bottom-drawer.qml
(+3 files in other folders)
